remove table stuff
