# openapi/core-vocabularies.yaml
@@ -238,104 +238,6 @@ paths:
           $ref: '#/components/responses/503ServiceUnavailable'
         default:
           $ref: '#/components/responses/default'
-  /tables:
-    get:
-      summary: Get informations about exiting tables.
-      description: |
-        Shows a list of supported tables matching the given name.
-      operationId: getTables
-      tags:
-      - public
-      parameters:
-      - $ref: '#/components/parameters/dictionary_name'
-      - $ref: '#/components/parameters/limit'
-      - $ref: '#/components/parameters/offset'
-      - $ref: '#/components/parameters/sort'
-      responses:
-        200:
-          description: |
-            A list of Tables.
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/X-RateLimit-Limit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/X-RateLimit-Remaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/X-RateLimit-Reset'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Tables'
-  /table/{table_uuid}/:
-    get:
-      summary: Get entries from a given table.
-      description: |
-        Retrieve paged entries from a Table.
-      operationId: getTableEntries
-      tags:
-      - public
-      parameters:
-      - $ref: '#/components/parameters/table_uuid_path'
-      - $ref: '#/components/parameters/name'
-      - $ref: '#/components/parameters/limit'
-      - $ref: '#/components/parameters/offset'
-      - $ref: '#/components/parameters/sort'
-      responses:
-        200:
-          description: |
-            Retrieve table data
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/X-RateLimit-Limit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/X-RateLimit-Remaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/X-RateLimit-Reset'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Entries'
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        404:
-          $ref: '#/components/responses/404NotFound'
-        default:
-          $ref: '#/components/responses/default'
-  /table/{table_uuid}/{entry_key}:
-    get:
-      summary: Get a Table entry
-      operationId: getEntryByTable
-      description: Retrieve an entry from a Table.
-      tags:
-      - public
-      parameters:
-      - $ref: '#/components/parameters/table_uuid_path'
-      - $ref: '#/components/parameters/entry_key_path'
-      responses:
-        200:
-          description: |
-            Returns the given entry.
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/X-RateLimit-Limit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/X-RateLimit-Remaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/X-RateLimit-Reset'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Entries'
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        404:
-          $ref: '#/components/responses/404NotFound'
-        429:
-          $ref: '#/components/responses/429TooManyRequests'
-        503:
-          $ref: '#/components/responses/503ServiceUnavailable'
-        default:
-          $ref: '#/components/responses/default'
 components:
   parameters:
     limit:
