# prj-simple/swagger_server/controllers/public_controller.py
@@ -19,6 +19,9 @@ def get_index_doctypes(cli, index):
     return list(mappings[index]['mappings'].keys())
 
 
+def entry_from_doc(doc):
+    return Entry(key=doc['_id'], data=doc['_source']['doc'])
+
 def get_dictionaries(name=None, limit=10, offset=0, sort=None):  # noqa: E501
     """Get informations about provided dictionaries.
 
@@ -84,11 +87,12 @@ def get_dictionary_version(dictionary_name, version, name=None, limit=10, offset
                    size=limit, from_=offset,
                    body={"query": {"match_all": {}}})
     print(res)
-    items = [ hit["_source"]["doc"] for hit in res['hits']['hits']]
+    items = [ entry_from_doc(hit) for hit in res['hits']['hits']]
     return {
         "items": items,
         "count": res['hits']['total'],
-        "offset_next": offset+limit
+        "offset": offset,
+        "offset_next": offset+limit,
         }
 
 
@@ -126,63 +130,12 @@ def get_entry(dictionary_name, version, entry_key):  # noqa: E501
     c = Elasticsearch(hosts='elastic')
     try:
         entry = c.get(index=dictionary_name, id=entry_key, doc_type=version)
-    except es_exc.NotFoundError:
-        return problem(status=404, title=f"Entry not found",
+    except es_exc.NotFoundError as e:  # TODO map Elastic error in API
+        if e.error == 'index_not_found_exception':
+            title = "dictionary not found"
+        else:
+            title = e.error
+        return problem(status=404, title=title,
                        detail=f"Entry id: {entry_key} not found in {dictionary_name}/{version}") 
     
-    return entry['_source']['doc']
-
-
-def get_entry_by_table(table_uuid, entry_key):  # noqa: E501
-    """Get a Table entry
-
-    Retrieve an entry from a Table. # noqa: E501
-
-    :param table_uuid: The table uuid
-    :type table_uuid: str
-    :param entry_key: The entry key
-    :type entry_key: str
-
-    :rtype: Entries
-    """
-    return 'do some magic!'
-
-
-def get_table_entries(table_uuid, name=None, limit=None, offset=None, sort=None):  # noqa: E501
-    """Get entries from a given table.
-
-    Retrieve paged entries from a Table.  # noqa: E501
-
-    :param table_uuid: The table uuid
-    :type table_uuid: str
-    :param name: The indexed key to search with.
-    :type name: str
-    :param limit: How many items to return at one time (max 100)
-    :type limit: int
-    :param offset: The zero-ary offset index into the results
-    :type offset: int
-    :param sort: Sorting order
-    :type sort: str
-
-    :rtype: Entries
-    """
-    return 'do some magic!'
-
-
-def get_tables(dictionary_name=None, limit=None, offset=None, sort=None):  # noqa: E501
-    """Get informations about exiting tables.
-
-    Shows a list of supported tables matching the given name.  # noqa: E501
-
-    :param dictionary_name: The name of the dictionary
-    :type dictionary_name: str
-    :param limit: How many items to return at one time (max 100)
-    :type limit: int
-    :param offset: The zero-ary offset index into the results
-    :type offset: int
-    :param sort: Sorting order
-    :type sort: str
-
-    :rtype: Tables
-    """
-    return 'do some magic!'
+    return entry_from_doc(entry)
